update python notebook

--- a/Notebook/Diabetes_Prediction_Model.ipynb
+++ b/Notebook/Diabetes_Prediction_Model.ipynb
@@ -158,6 +158,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "62b87533-d5f6-4316-a670-fbfb8f9dd481",
+   "metadata": {},
+   "source": [
+    "**Exploratory Data Analysis (EDA)**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "2e144adb-3d23-41fd-990f-bf7beb70b321",
@@ -415,6 +423,14 @@
    ],
    "source": [
     "diabetes_df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b17d56e7-7868-4f5c-a5c0-b6b36e2c988e",
+   "metadata": {},
+   "source": [
+    "**Preparing data for model training**"
    ]
   },
   {
@@ -979,8 +995,7 @@
     }
    ],
    "source": [
-    "#input_data = ([[0, 80, 60, 20, 0, 20.0, 0.2, 25]])\n",
-    "#input_data = (10, 101, 76, 48, 180,\t32.9, 0.171, 63)\n",
+    "#Input Data to test the prediction \n",
     "input_data = (8, 183, 64, 0, 0, 23.3, 0.672, 32)\n",
     "np_arry_data = np.asarray(input_data)\n",
     "reshape_data = np_arry_data.reshape(1, -1)\n",
@@ -994,17 +1009,6 @@
     "    print(\"This person has diabetes\")\n",
     "else:\n",
     "    print(\"This person has no diabetes\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c5203455-637a-4967-86b0-0ea18670b32e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "decision_value =  svc.decision_function(scaled_data)\n",
-    "print(f\"Decision value: {decision_value}\")\n"
    ]
   },
   {
@@ -1133,6 +1137,14 @@
    ],
    "source": [
     "diabetes_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a16035a5-c725-4963-81c4-0cd0f60117bf",
+   "metadata": {},
+   "source": [
+    "**We will now compare SVC to other models ultimately deciding on the model that performs the best**"
    ]
   },
   {
